--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 窦朋的博客
-SEOTitle: 窦朋的博客
+title: Doupeng Blog
+SEOTitle: 窦朋的博客 | Doupeng Blog
 header-img: img/home-bg_meitu_1.jpg
 email: doupeng1993@sina.com
 description: " 这里是 @窦朋的个人博客。"
@@ -60,7 +60,7 @@ duoshuo_share: true                     # set to false if you want to use Commen
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "与善人居，如入芝兰之室，久而不闻其香，即与之化矣。"
+sidebar-about-description: "我喜欢抽象，但我更爱真实的生活"
 sidebar-avatar: /img/avatar-orchid.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
