--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ kramdown:
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "我喜欢抽象的事物</br>但我热爱真实的生活..."
+sidebar-about-description: "我喜欢抽象的事物</br>但我更加热爱真实的生活..."
 sidebar-avatar: /img/avatar-orchid.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
