--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Doupeng Blog
 SEOTitle: 窦朋的博客 | Doupeng Blog
 header-img: img/home-bg_meitu_1.jpg
 email: doupeng1993@sina.com
-description: " 这里是 @窦朋的个人博客。"
+description: " 这里是@窦朋的个人博客。"
 keyword: "Doupeng, Doupeng Blog, 博客, 个人网站, 互联网, Python, 爬虫"
 url: "http://doupengs.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
@@ -14,7 +14,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 RSS: false
 #weibo_username:     u/1058773570
 #facebook_username:  zyddora 
-#github_username:    zyddora 
+github_username:    doupengs
 #twitter_username:  huxpro
 
 
@@ -44,7 +44,7 @@ kramdown:
 # Duoshuo settings
 #duoshuo_username: orchid 
 # Share component is depend on Comment so we can NOT use share only.
-#duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
 
 
@@ -72,27 +72,18 @@ featured-condition-size: 0              # A tag will be featured if the size of 
 
 
 # Friends
-#friends: [
-#    {
-#        title: "天镶的博客",
-#        href: "http://lingyu.wang/"
-#    },{
-#        title: "Luke的自留地",
-#        href: "http://hmqk1995.github.io"
-#    },{
-#        title: "SmdCn's Blog",
-#        href: "http://blog.smdcn.net"
-#    },{
-#        title: "解旻的博客",
-#        href: "http://xieminis.me/"
-#    },{
-#        title: "DHong Say",
-#        href: "http://dhong.co"
-#    },{
-#        title: "尹峰以为",
-#        href: "http://ingf.github.io/"
-#    }
-#]
+friends: [
+    {
+        title: "百度",
+        href: "https://www.baidu.com"
+    },{
+        title: "京东",
+        href: "https://www.jd.com"
+    },{
+        title: "淘宝",
+        href: "https://www.taobao.com/"
+    }
+]
 
 #extra setting 
 encoding: utf-8
