--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ kramdown:
 #disqus_username: _your_disqus_short_name_
 
 # Duoshuo settings
-duoshuo_username: doupengs
+duoshuo_username: orchid
 # Share component is depend on Comment so we can NOT use share only.
 duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
@@ -72,18 +72,18 @@ featured-condition-size: 0              # A tag will be featured if the size of 
 
 
 # Friends
-friends: [
-    {
-        title: "百度",
-        href: "https://www.baidu.com"
-    },{
-        title: "京东",
-        href: "https://www.jd.com"
-    },{
-        title: "淘宝",
-        href: "https://www.taobao.com/"
-    }
-]
+#friends: [
+#    {
+#        title: "百度",
+#        href: "https://www.baidu.com"
+#    },{
+#        title: "京东",
+#        href: "https://www.jd.com"
+#    },{
+#        title: "淘宝",
+#        href: "https://www.taobao.com/"
+#    }
+#]
 
 #extra setting 
 encoding: utf-8
