--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Doupeng Blog
 SEOTitle: 窦朋的博客 | Doupeng Blog
 header-img: img/home-bg_meitu_1.jpg
 email: doupeng1993@sina.com
-description: " 这里是@窦朋的个人博客。"
+description: " 这里是窦朋的博客。"
 keyword: "Doupeng, Doupeng Blog, 博客, 个人网站, 互联网, Python, 爬虫"
 url: "http://doupengs.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
@@ -12,8 +12,8 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-#weibo_username:     u/1058773570
-#facebook_username:  zyddora 
+weibo_username:     u/3803122676
+facebook_username:  pycodeboy
 github_username:    doupengs
 #twitter_username:  huxpro
 
@@ -22,7 +22,7 @@ github_username:    doupengs
 # Build settings
 highlighter: rouge
 permalink: pretty
-paginate: 10
+paginate: 5
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
